# cmake_doc

./: CMakeLists.txt  config.h.in  main.cpp
docs/: README.md
mylib/: mylib.cpp  mylib.h
